--- a/28072023/style/style.css
+++ b/28072023/style/style.css
@@ -336,11 +336,17 @@ iframe {
   margin: 7px;
 }
 
-  .navbar-toggler-icon {
-
-
-  }
-
   .navbar {
     --bs-navbar-toggler-icon-bg:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28 255, 255, 255, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
   }
+
+  footer {
+    background: linear-gradient(90deg, rgba(4, 0, 70, 1) 0%, rgba(8, 0, 32, 1) 0%, rgba(23, 23, 85, 1) 48%, rgba(0, 16, 52, 1) 100%);
+
+  }
+
+ .mb-4 .btn {
+  border-radius: 37px;
+  width: 37px;
+  height: 37px;
+ }
